2009-11-07  Ivan Maidanski <ivmai@mail.ru>

	* win32_threads.c (THREAD_TABLE_SZ): Change back to a power-of-two
	const value (for speed).
	* win32_threads.c (THREAD_TABLE_INDEX): New macro.
	* win32_threads.c (GC_new_thread, GC_lookup_thread_inner,
	GC_delete_gc_thread, GC_delete_thread, GC_lookup_pthread): Use
	THREAD_TABLE_INDEX instead of THREAD_TABLE_SZ.
	* win32_threads.c (PTHREAD_MAP_HASH): Rename to PTHREAD_MAP_INDEX.

2009-11-07  Ivan Maidanski <ivmai@mail.ru>

	* win32_threads.c (THREAD_TABLE_SZ): Make the const value prime.

2009-11-06  Ivan Maidanski <ivmai@mail.ru>

	* backgraph.c: Remove apostrophe char from "#error".

2009-11-06  Ivan Maidanski <ivmai@mail.ru>

	* doc/README.macros (GC_DISABLE_INCREMENTAL): Document.
	* include/private/gcconfig.h (GC_DISABLE_INCREMENTAL): Recognize
	new macro; implicitly define it if SMALL_CONFIG.
	* alloc.c (GC_incremental, GC_timeout_stop_func): Check for
	GC_DISABLE_INCREMENTAL instead of SMALL_CONFIG.
	* include/private/gc_priv.h (GC_incremental, TRUE_INCREMENTAL,
	GC_push_conditional): Ditto.
	* mark.c (GC_push_next_marked_dirty, GC_push_selected,
	GC_push_conditional, GC_block_was_dirty): Ditto.
	* misc.c (GC_enable_incremental): Ditto.
	* misc.c (GC_init): Ditto (for "GC_PAUSE_TIME_TARGET" and
	"GC_ENABLE_INCREMENTAL" environment variables).
	* misc.c (GC_enable_incremental): Reformat the code.

2009-11-06  Ivan Maidanski <ivmai@mail.ru>

	* dyn_load.c (WIN32_LEAN_AND_MEAN): Guard with ifndef.
	* misc.c (WIN32_LEAN_AND_MEAN): Ditto.
	* os_dep.c (WIN32_LEAN_AND_MEAN): Ditto.
	* allchblk.c (GC_allochblk_nth): Fix a minor typo (don't/doesn't)
	in a comment.
	* backgraph.c: Ditto.
	* dyn_load.c (GC_register_dynamic_libraries): Ditto.
	* extra/threadlibs.c (main): Ditto.
	* pthread_support.c (pthread_join): Ditto.
	* tests/test.c (main): Ditto.

2009-11-06  Ivan Maidanski <ivmai@mail.ru>

	* mach_dep.c (GC_push_regs): Remove STATIC (just to catch
	a duplicate symbol definition linker error).